--- a/index.html
+++ b/index.html
@@ -14,61 +14,138 @@
 </head>
 <body>
 
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
+  <div class="container">
+    <div class="title">
+      <div class="name">
+        <div class="name-image">
+          <img src="images/image-jeremy.png" alt="Jeremy" />
+        </div>
+        <div class="name-text">
+          <p>Report for</p>
+          <h1>Jeremy Robson</h1>
+        </div>
+      </div>
+      <div class="time">
+        <p>Daily</p>
+        <p>Weekly</p>
+        <p>Monthly</p>
+      </div>
+    </div>
+    <div class="work">
+      <div class="text">
+        <div class="title">
+          <h2>Work</h2>
+        </div>
+        <div class="daily">
+          <h3>5hrs <!-- daily --></h3>
+          <p>Previous - 7hrs <!-- daily --></p>
+        </div>
+        <div class="weekly">
+          <h3>32hrs <!-- weekly --></h3>
+          <p>Previous - 36hrs <!-- weekly --></p>
+        </div>
+        <div class="monthly">
+          <h3>103hrs <!-- monthly --></h3>
+          <p>Previous - 128hrs <!-- monthly --></p>
+        </div>
+      </div>
+    </div>
+    <div class="play">
+      <div class="text">
+        <div class="title">
+          <h2>Play</h2>
+        </div>
+        <div class="daily">
+          <h3>1hr <!-- daily --></h3>
+          <p>Previous - 2hrs <!-- daily --></p>
+        </div>
+        <div class="weekly">
+          <h3>10hrs <!-- weekly --></h3>
+          <p>Previous - 8hrs <!-- weekly --></p>
+        </div>
+        <div class="monthly">
+          <h3>23hrs <!-- monthly --></h3>
+          <p>Previous - 29hrs <!-- monthly --></p>
+        </div>
+      </div>
+    </div>
+    <div class="study">
+      <div class="text">
+        <div class="title">
+          <h2>Study</h2>
+        </div>
+        <div class="daily">
+          <h3>0hrs <!-- daily --></h3>
+          <p>Previous - 1hr <!-- daily --></p>
+        </div>
+        <div class="weekly">
+          <h3>4hrs <!-- weekly --></h3>
+          <p>Previous - 7hrs <!-- weekly --></p>
+        </div>
+        <div class="monthly">
+          <h3>13hrs <!-- monthly --></h3>
+          <p>Previous - 19hrs <!-- monthly --></p>
+        </div>
+      </div>
+    </div>
+    <div class="exercise">
+      <div class="text">
+        <div class="title">
+          <h2>Exercise</h2>
+        </div>
+        <div class="daily">
+          <h3>1hr <!-- daily --></h3>
+          <p>Previous - 1hr <!-- daily --></p>
+        </div>
+        <div class="weekly">
+          <h3>4hrs <!-- weekly --></h3>
+          <p>Previous - 5hrs <!-- weekly --></p>
+        </div>
+        <div class="monthly">
+          <h3>11hrs <!-- monthly --></h3>
+          <p>Previous - 18hrs <!-- monthly --></p>
+        </div>
+      </div>
+    </div>
+    <div class="social">
+      <div class="text">
+        <div class="title">
+          <h2>Social</h2>
+        </div>
+        <div class="daily">
+          <h3>1hr <!-- daily --></h3>
+          <p>Previous - 3hrs <!-- daily --></p>
+        </div>
+        <div class="weekly">
+          <h3>5hrs <!-- weekly --></h3>
+          <p>Previous - 10hrs <!-- weekly --></p>
+        </div>
+        <div class="monthly">
+          <h3>21hrs <!-- monthly --></h3>
+          <p>Previous - 23hrs <!-- monthly --></p>
+        </div>
+      </div>
+    </div>
+    <div class="self-care">
+      <div class="text">
+        <div class="title">
+          <h2>Self Care</h2>
+        </div>
+        <div class="daily">
+          <h3>0hrs <!-- daily --></h3>
+          <p>Previous - 1hr <!-- daily --></p>
+        </div>
+        <div class="weekly">
+          <h3>2hrs <!-- weekly --></h3>
+          <p>Previous - 2hrs <!-- weekly --></p>
+        </div>
+        <div class="monthly">
+          <h3>7hrs <!-- monthly --></h3>
+          <p>Previous - 11hrs <!-- monthly --></p>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
