--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="container">
-    <div class="title">
+    <div class="intro">
       <div class="name">
         <div class="name-image">
           <img src="images/image-jeremy.png" alt="Jeremy" />
