Finished Mobile Styles

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
       </div>
     </div>
     <div class="work">
+      <div class="logo-container">
+        <img class="logo" src="images/icon-work.svg" alt="work" />
+      </div>
       <div class="text">
         <div class="title">
           <h2>Work</h2>
+          <img src="images/icon-ellipsis.svg" alt="ellipses" />
         </div>
         <div class="daily">
           <h3>5hrs <!-- daily --></h3>
@@ -51,9 +55,13 @@
       </div>
     </div>
     <div class="play">
+      <div class="logo-container">
+        <img class="logo" src="images/icon-play.svg" alt="Play" />
+      </div>
       <div class="text">
         <div class="title">
           <h2>Play</h2>
+          <img src="images/icon-ellipsis.svg" alt="ellipses" />
         </div>
         <div class="daily">
           <h3>1hr <!-- daily --></h3>
@@ -70,9 +78,13 @@
       </div>
     </div>
     <div class="study">
+      <div class="logo-container">
+        <img class="logo" src="images/icon-study.svg" alt="study" />
+      </div>
       <div class="text">
         <div class="title">
           <h2>Study</h2>
+          <img src="images/icon-ellipsis.svg" alt="ellipses" />
         </div>
         <div class="daily">
           <h3>0hrs <!-- daily --></h3>
@@ -89,9 +101,13 @@
       </div>
     </div>
     <div class="exercise">
+      <div class="logo-container">
+        <img class="logo" src="images/icon-exercise.svg" alt="Exercise" />
+      </div>
       <div class="text">
         <div class="title">
           <h2>Exercise</h2>
+          <img src="images/icon-ellipsis.svg" alt="ellipses" />
         </div>
         <div class="daily">
           <h3>1hr <!-- daily --></h3>
@@ -108,9 +124,13 @@
       </div>
     </div>
     <div class="social">
+      <div class="logo-container">
+        <img class="logo" src="images/icon-social.svg" alt="Social" />
+      </div>
       <div class="text">
         <div class="title">
           <h2>Social</h2>
+          <img src="images/icon-ellipsis.svg" alt="ellipses" />
         </div>
         <div class="daily">
           <h3>1hr <!-- daily --></h3>
@@ -127,9 +147,13 @@
       </div>
     </div>
     <div class="self-care">
+      <div class="logo-container">
+        <img class="logo" src="images/icon-self-care.svg" alt="Self Care" />
+      </div>
       <div class="text">
         <div class="title">
           <h2>Self Care</h2>
+          <img src="images/icon-ellipsis.svg" alt="ellipses" />
         </div>
         <div class="daily">
           <h3>0hrs <!-- daily --></h3>
