Desktop Grid start

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <h3>5hrs <!-- daily --></h3>
           <p>Previous - 7hrs <!-- daily --></p>
         </div>
-        <div class="weekly">
+        <div class="weekly hide">
           <h3>32hrs <!-- weekly --></h3>
           <p>Previous - 36hrs <!-- weekly --></p>
         </div>
-        <div class="monthly">
+        <div class="monthly hide">
           <h3>103hrs <!-- monthly --></h3>
           <p>Previous - 128hrs <!-- monthly --></p>
         </div>
@@ -67,11 +67,11 @@
           <h3>1hr <!-- daily --></h3>
           <p>Previous - 2hrs <!-- daily --></p>
         </div>
-        <div class="weekly">
+        <div class="weekly hide">
           <h3>10hrs <!-- weekly --></h3>
           <p>Previous - 8hrs <!-- weekly --></p>
         </div>
-        <div class="monthly">
+        <div class="monthly hide">
           <h3>23hrs <!-- monthly --></h3>
           <p>Previous - 29hrs <!-- monthly --></p>
         </div>
@@ -90,11 +90,11 @@
           <h3>0hrs <!-- daily --></h3>
           <p>Previous - 1hr <!-- daily --></p>
         </div>
-        <div class="weekly">
+        <div class="weekly hide">
           <h3>4hrs <!-- weekly --></h3>
           <p>Previous - 7hrs <!-- weekly --></p>
         </div>
-        <div class="monthly">
+        <div class="monthly hide">
           <h3>13hrs <!-- monthly --></h3>
           <p>Previous - 19hrs <!-- monthly --></p>
         </div>
@@ -113,11 +113,11 @@
           <h3>1hr <!-- daily --></h3>
           <p>Previous - 1hr <!-- daily --></p>
         </div>
-        <div class="weekly">
+        <div class="weekly hide">
           <h3>4hrs <!-- weekly --></h3>
           <p>Previous - 5hrs <!-- weekly --></p>
         </div>
-        <div class="monthly">
+        <div class="monthly hide">
           <h3>11hrs <!-- monthly --></h3>
           <p>Previous - 18hrs <!-- monthly --></p>
         </div>
@@ -136,11 +136,11 @@
           <h3>1hr <!-- daily --></h3>
           <p>Previous - 3hrs <!-- daily --></p>
         </div>
-        <div class="weekly">
+        <div class="weekly hide">
           <h3>5hrs <!-- weekly --></h3>
           <p>Previous - 10hrs <!-- weekly --></p>
         </div>
-        <div class="monthly">
+        <div class="monthly hide">
           <h3>21hrs <!-- monthly --></h3>
           <p>Previous - 23hrs <!-- monthly --></p>
         </div>
@@ -159,11 +159,11 @@
           <h3>0hrs <!-- daily --></h3>
           <p>Previous - 1hr <!-- daily --></p>
         </div>
-        <div class="weekly">
+        <div class="weekly hide">
           <h3>2hrs <!-- weekly --></h3>
           <p>Previous - 2hrs <!-- weekly --></p>
         </div>
-        <div class="monthly">
+        <div class="monthly hide">
           <h3>7hrs <!-- monthly --></h3>
           <p>Previous - 11hrs <!-- monthly --></p>
         </div>
