--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
       </div>
       <div class="time">
-        <p>Daily</p>
-        <p>Weekly</p>
-        <p>Monthly</p>
+        <p id="day">Daily</p>
+        <p id="week">Weekly</p>
+        <p id="month">Monthly</p>
       </div>
     </div>
     <div class="work">
